--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.41",
     "tailwindcss": "3.4.10",
