--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,7 +7,7 @@
         "ignore": ["consecutive-duplicates-with-different-values"]
       }
     ],
-    "selector-class-pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*(?:__(?:[a-z0-9]+(?:-[a-z0-9]+)*))?$",
-    "no-duplicate-selectors": true
+    "selector-class-pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*(?:__(?:[a-z0-9]+(?:-[a-z0-9]+)*))*(?:--[a-z0-9]+(?:-[a-z0-9]+)*)?$",
+    "no-duplicate-selectors": false
   }
 }
